testsuite/tests/properties/invalid_dflt_arg_val/bad_type.lkt
import common

class Example: FooNode {
    @exported fun p(a: Bool=1): Bool = a
}
